<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.starshipsacapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_starship"
        android:name="com.example.starshipsacapp.ui.starship.StarshipFragment"
        android:label="@string/menu_starships"
        tools:layout="@layout/fragment_starship" >
        <action
            android:id="@+id/action_nav_starship_to_starshipDetailFragment2"
            app:destination="@id/starshipDetailFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_planet"
        android:name="com.example.starshipsacapp.ui.planet.PlanetFragment"
        android:label="@string/menu_planets"
        tools:layout="@layout/fragment_planet" />
    <fragment
        android:id="@+id/starshipDetailFragment2"
        android:name="com.example.starshipsacapp.ui.starship.StarshipDetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_starship_detail" />
</navigation>