<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/home_dialog_add_collection"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbStarships"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_starship_category"
            android:checked="true"
            android:text="@string/dialog_category_starships"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPlanets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_planet_category"
            android:checked="true"
            android:text="@string/dialog_category_planets"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_specie_category"
            android:checked="true"
            android:text="@string/dialog_category_species"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddCollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/dialog_collection_button" />

</androidx.appcompat.widget.LinearLayoutCompat>